--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
                             <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-2</a></li>
                             <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-3</a></li>
                             <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-4</a></li>
-                            <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-5</a></li>
+                            <li class="dropdown__item">
+                                <a href="#" class="dropdown__link">SubLink-5<span class="arrow">&#9654</span></a>
+                                <ul class="dropdown dropdown--second">
+                                    <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-1</a></li>
+                                    <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-2</a></li>
+                                    <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-3</a></li>
+                                    <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-4</a></li>
+                                    <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-5</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown__item"><a href="#" class="dropdown__link">SubLink-4</a></li>
